--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yiwei Hou"
-description              : "Security researcher in [Software System Security Assurance Group - WingTecher Lab](http://wingtecher.com/homeen), [School of Software](https://www.thss.tsinghua.edu.cn/), [Tsinghua University](https://www.tsinghua.edu.cn/en/)."
+description              : "Security researcher in the WingTecher Lab, School of Software, Tsinghua University."
 repository               : "m1-llie/m1-llie.github.io"
 google_scholar_stats_use_cdn : true
 
