--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Yiwei Hou"
+  name             : "Yiwei Hou 侯伊为"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Tsinghua University"
   location         : "Beijing, China"
