--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Yiwei Hou 侯伊为"
-  avatar           : "images/me.png"
+  avatar           : "images/me.jpg"
   bio              : "Tsinghua University"
   location         : "Beijing, China"
   employer         :
