--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ repository               : "m1-llie/m1-llie.github.io"
 google_scholar_stats_use_cdn : false  #true
 
 # google analytics
-google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
+google_analytics_id      :  G-RKPQB5X418  # get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
 google_site_verification :  # get google_site_verification from https://search.google.com/search-console/about
