--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   weibo            :
   xing             :
   youtube          :
-  wikipedia        : hey
+  wikipedia        : CV.pdf
 
 
 # Reading Files
