--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=l0cDRG0AAAAJ"
-  email            : "yiweihou233@gmail.com"
+  email            : "houyw22@mails.tsinghua.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
