date-time present

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yiwei Hou"
-description              : "Security researcher in the WingTecher Lab, School of Software, Tsinghua University."
+description              : "Master student in the WingTecher Lab, School of Software, Tsinghua University."
 repository               : "m1-llie/m1-llie.github.io"
 google_scholar_stats_use_cdn : false  #true
 
