remove emoji from navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,19 +4,19 @@ main:
     url: "/#about-me"
 
   - title: "News"
-    url: "/#-news"
+    url: "/#news"
 
   - title: "Publications"
-    url: "/#-publications"
+    url: "/#publications"
 
   - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+    url: "/#honors-and-awards"
 
   - title: "Education"
-    url: "/#-education"
+    url: "/#education"
 
   # - title: "Invited Talks"
   #   url: "/#-invited-talks"
 
   - title: "Academic Service"
-    url: "/#-academic-service"
+    url: "/#academic-service"
