--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Yiwei Hou 侯伊为"
   avatar           : "images/me.jpg"
-  bio              : "Photo credit: [Yihao](https://www.usenix.org/conference/usenixsecurity24/presentation/chen-yihao)"
+  bio              : "Tsinghua University"
   location         : "Beijing, China"
   employer         :
   pubmed           : 
